# technician-booking-backend

./: .env.example  =0.26.0  LICENSE  README.md  init_project.sh  pyproject.toml
app/: main.py
app/config/: settings.py
app/core/: cli.py  initial_data.py
app/models/: booking.py  professions.py
app/routers/: bookings.py
app/schemas/: booking.py  response.py
app/services/: booking_service.py  nlp_service.py  validation.py
app/utils/: datetime_utils.py  llm_processor.py
tests/unit/: test_booking_service.py  test_intent_classification.py
